tests/specs/ecosystem/std/testing/0_208_0.test
std/testing/0.208.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/assert@^0.208.0": "jsr:@std/assert@0.208.0",
      "jsr:@std/async@^0.208.0": "jsr:@std/async@0.208.0",
      "jsr:@std/fmt@^0.208.0": "jsr:@std/fmt@0.208.0"
    },
    "jsr": {
      "@std/assert@0.208.0": {
        "integrity": "1aa06be08916efe062e40c0948e95034cea4627355dcb32a5e1d4e52786ace7c",
        "dependencies": [
          "jsr:@std/fmt@^0.208.0"
        ]
      },
      "@std/async@0.208.0": {
        "integrity": "8ed9790389b8fcef907703693dd785f0610fb0adb45964f03c8386b7551f4fc7"
      },
      "@std/fmt@0.208.0": {
        "integrity": "06584c97a1a7b934e8de185c45a595d8234c5312e51e61cb05650af4cb8eb65f"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:581:11
    | 
581 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
582 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
583 |   return it({
    | ^^^^^^^^^^^^^
584 |     ...options,
    | ^^^^^^^^^^^^^^^
585 |     only: true,
    | ^^^^^^^^^^^^^^^
586 |   });
    | ^^^^^
587 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:589:13
    | 
589 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
590 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
591 |   return it({
    | ^^^^^^^^^^^^^
592 |     ...options,
    | ^^^^^^^^^^^^^^^
593 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
594 |   });
    | ^^^^^
595 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


